# timeflow

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20260721_0001_baseline_empty_schema.py
backend/src/timeapp/: __init__.py  main.py
backend/src/timeapp/agents/: __init__.py
backend/src/timeapp/agents/feedback_agent/: __init__.py  prompts.py  schemas.py  service.py
backend/src/timeapp/agents/main_agent/: __init__.py  dispatcher.py  router.py  schemas.py
backend/src/timeapp/agents/replanning_agent/: __init__.py  prompts.py  schemas.py  service.py
backend/src/timeapp/agents/review_agent/: __init__.py  prompts.py  schemas.py  service.py
backend/src/timeapp/agents/schedule_todo_agent/: __init__.py  prompts.py  schemas.py  service.py
backend/src/timeapp/agents/task_breakdown_agent/: __init__.py  prompts.py  schemas.py  service.py
backend/src/timeapp/api/: dependencies.py  health.py  router.py
backend/src/timeapp/basic/: __init__.py
backend/src/timeapp/basic/identity/: __init__.py  router.py
backend/src/timeapp/basic/multimodal/: __init__.py  router.py
backend/src/timeapp/basic/reminders/: __init__.py  router.py
backend/src/timeapp/basic/timeline/: __init__.py  router.py
backend/src/timeapp/basic/usage_management/: __init__.py  router.py
backend/src/timeapp/common/: __init__.py
backend/src/timeapp/common/confirmation/: __init__.py
backend/src/timeapp/common/context/: __init__.py
backend/src/timeapp/common/contracts/: __init__.py  agent_response.py  conversation.py
backend/src/timeapp/common/data/: __init__.py
backend/src/timeapp/common/llm/: __init__.py
backend/src/timeapp/common/questioning/: __init__.py
backend/src/timeapp/common/task_profile/: __init__.py
backend/src/timeapp/core/: config.py  db.py
backend/src/timeapp/modules/: __init__.py
backend/src/timeapp/modules/feedback/: router.py
backend/src/timeapp/modules/goal_planning/: __init__.py  router.py
backend/src/timeapp/modules/identity/: __init__.py  router.py
backend/src/timeapp/modules/multimodal/: __init__.py  router.py
backend/tests/: test_agent_contracts.py  test_architecture.py  test_health.py
docs/: dependency-management.md  (+1 more)
(+26 files in other folders)
