[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timeapp"
version = "0.1.0"
description = "A small, extensible FastAPI service."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic",
    "fastapi",
    "pydantic-settings",
    "sqlalchemy",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "httpx",
    "mypy>=2.3.0",
    "pytest",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit（安全）
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "T20", # flake8-print（禁止 print）
    "RUF", # ruff 专属规则
]
ignore = [
    "RUF001", # 中文注释使用全角标点，属于项目约定
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # 测试中允许 assert

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
files = ["src", "tests"]
plugins = ["pydantic.mypy"]
